layout bug fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1752,7 +1752,6 @@ input[type=number]::-webkit-outer-spin-button {
     display: none !important;
 }
 
-/* Complete Task Screen */
 .complete-screen-container {
     height: 100%;
     width: 100%;
@@ -1762,6 +1761,7 @@ input[type=number]::-webkit-outer-spin-button {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    z-index: 5000;
 }
 
 .complete-screen-container {
